# mcp-server-terminal

./: .dockerignore  .gitignore  .npmignore  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  REGISTRY-SUBMISSIONS.md  SECURITY.md  SUPPORT.md  cli.js  docker-compose.yml  package.json  server.json  smithery.yaml  tarpaulin.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-build.yml  docker-security-scan.yml  publish.yml  release.yml
crates/terminal-mcp/: Cargo.toml
crates/terminal-mcp-core/: Cargo.toml  README.md
crates/terminal-mcp-core/src/: cell.rs  config.rs  element.rs  error.rs  geometry.rs  key.rs  lib.rs  platform.rs  session.rs
crates/terminal-mcp-detector/: Cargo.toml  README.md
crates/terminal-mcp-detector/benches/: detection.rs
crates/terminal-mcp-detector/src/: assembler.rs  detection.rs  lib.rs
crates/terminal-mcp-detector/src/detectors/: border.rs  button.rs  checkbox.rs  input.rs  menu.rs  mod.rs  progress.rs  status_bar.rs  table.rs
crates/terminal-mcp-detector/src/testing/: mod.rs  snapshot_compare.rs
crates/terminal-mcp-detector/tests/: property_tests.rs  test_issue_141_fix.rs
crates/terminal-mcp-emulator/: Cargo.toml  README.md
crates/terminal-mcp-emulator/src/: grid.rs  lib.rs  parser.rs  pty.rs  recording.rs
crates/terminal-mcp-session/: Cargo.toml  README.md
crates/terminal-mcp-session/src/: lib.rs  manager.rs  navigation.rs  output.rs  session.rs  snapshot.rs  wait.rs
crates/terminal-mcp-session/src/visual/: linux.rs  macos.rs  mod.rs  registry.rs  windows.rs
crates/terminal-mcp-session/tests/: visual_integration_test.rs
crates/terminal-mcp/src/: lib.rs  main.rs  schema.rs  tools.rs
crates/terminal-mcp/src/protocol/: mod.rs  server.rs
crates/terminal-mcp/tests/: integration_test.rs
docs/guides/: LOGGING.md  VISUAL-TERMINAL-GUIDE.md
